Fix: New translations django.po from Crowdin

--- a/InvenTree/locale/tr/LC_MESSAGES/django.po
+++ b/InvenTree/locale/tr/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-11 13:38+0000\n"
-"PO-Revision-Date: 2023-04-11 18:00\n"
+"PO-Revision-Date: 2023-04-13 18:02\n"
 "Last-Translator: \n"
 "Language-Team: Turkish\n"
 "Language: tr_TR\n"
@@ -23,7 +23,7 @@ msgstr "API uç noktası bulunamadı"
 
 #: InvenTree/api.py:299
 msgid "User does not have permission to view this model"
-msgstr ""
+msgstr "Kullanıcının bu modeli görüntüleme izni yok"
 
 #: InvenTree/exceptions.py:94
 msgid "Error details can be found in the admin panel"
@@ -63,7 +63,7 @@ msgstr ""
 
 #: InvenTree/format.py:162
 msgid "Provided value does not match required pattern: "
-msgstr ""
+msgstr "Sağlanan değer gerekli kalıpla eşleşmiyor: "
 
 #: InvenTree/forms.py:145
 msgid "Enter password"
@@ -99,11 +99,11 @@ msgstr "Her seferind eaynı e-posta adresini yazmalısınız."
 
 #: InvenTree/forms.py:230 InvenTree/forms.py:236
 msgid "The provided primary email address is not valid."
-msgstr ""
+msgstr "Sağlanan e-posta adresi geçerli değil."
 
 #: InvenTree/forms.py:242
 msgid "The provided email domain is not approved."
-msgstr ""
+msgstr "Sağlanan e-posta alanı onaylanmadı."
 
 #: InvenTree/helpers.py:168
 msgid "Connection error"
@@ -119,7 +119,7 @@ msgstr "İstisna oluştu"
 
 #: InvenTree/helpers.py:182
 msgid "Server responded with invalid Content-Length value"
-msgstr ""
+msgstr "Sunucu geçersiz Content-Length değeriyle yanıt verdi"
 
 #: InvenTree/helpers.py:185
 msgid "Image size is too large"
@@ -147,12 +147,12 @@ msgstr "Boş seri numarası dizesi"
 
 #: InvenTree/helpers.py:640
 msgid "Duplicate serial"
-msgstr ""
+msgstr "Yinelenen seri"
 
 #: InvenTree/helpers.py:673 InvenTree/helpers.py:708
 #, python-brace-format
 msgid "Invalid group range: {g}"
-msgstr ""
+msgstr "Geçersiz grup: {g}"
 
 #: InvenTree/helpers.py:702
 #, python-brace-format
